fix color contrast

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ img {
     font-family: "Montserrat";
     font-weight: 600;
     font-size: 10px;
-    color: #a9a9a9;
+    color: #595959;
     margin-top: .25rem;
 }
 
@@ -69,7 +69,7 @@ img {
     font-family: "Montserrat";
     font-weight: 600;
     font-size: 12px;
-    color: #bdbdbd;
+    color: #4A4A4A;
 }
 
 .profileinfo {
